Bug 88504 - Untranslated strings in Hangul/Hanja Conversion dialog
Summary: Untranslated strings in Hangul/Hanja Conversion dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
4.4.0.0.beta2
Hardware: Other All
: medium normal
Assignee: David Tardon
URL:
Whiteboard: target:4.5.0
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-16 17:55 UTC by Stanislav Horacek
Modified: 2015-01-19 14:10 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Hangul/Hanja dialog for strings with KeyIDs (57.70 KB, image/png)
2015-01-16 17:55 UTC, Stanislav Horacek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stanislav Horacek 2015-01-16 17:55:42 UTC
Created attachment 112356 [details]
Hangul/Hanja dialog for strings with KeyIDs

In Hangul/Hanja Conversion dialog (Tools - Language - Hangul/Hanja Conversion; cursor must be placed in text in Korean before) there are untranslated labels "Hangul" or "Hanja".

The strings seem to be available in Pootle (ID JCMkL and following).

Tested in 4.4 beta 2 and RC2.
Comment 1 Stanislav Horacek 2015-01-16 18:03:52 UTC
I wanted to file it as UNCONFIRMED, now this cannot be changed... weird.
Comment 2 Commit Notification 2015-01-19 14:10:18 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ce20c5bf0d47a762ded68c5ee51f5b29b9becf6c

fdo#88504 untranslated strings in Hangul/Hanja Conversion dialog

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.