fdo#88504 untranslated strings in Hangul/Hanja Conversion dialog

Change-Id: Ia7db917bef75182f2c43020fa3237dd7aba91683